--- a/models/wright-cross-dual-3-commodity/data/params.yml
+++ b/models/wright-cross-dual-3-commodity/data/params.yml
@@ -3,7 +3,7 @@ presets:
     name: Default
     desc: ''
     params:
-      A: [[0.2, 0.0, 0.4], [0.2, 0.8, 0.0], [0.0, 0.1, 0.1]]
+      A: [[0.2, 0.2, 0.4], [0.2, 0.8, 0.0], [0.0, 0.1, 0.1]]
       l: [0.7, 0.6, 0.3]
       b_bar: [0.6, 0.0, 0.2]
       c_bar: [0.2, 0.0, 0.4]
@@ -13,19 +13,43 @@ presets:
       kappa: [1, 1, 1]
       eta: [2, 2, 2]
       eta_w: 0.25
-      L: 1
       eta_r: 2
+      L: 1
+      w: 0.5
+      r: 0.03
       q: [0.01, 0.1, 0.1]
       p: [1.0, 0.8, 0.5]
       s: [0.01, 0.1, 0.25]
       m_w: 0.5
-      init_tssi_melt: 1
-      w: 0.5
-      r: 0.03
-      T: 100
-      shock_mag: 0.03
+      M: 1.0
+      M_change_type: none
+      money_injection_target: capitalists
+      M_change_interval: 20
+      M_change_duration: 1
+      delta_M: 1
+      shock_type: culs
       change_type: none
       economy_type: unrestricted
+      wage_deflation: 0.0
+      gamma_L: 0.3
+      atrophy_with_unemployment: always
+      supply_shock_mag: 0.5
+      supply_shock_interval: 50
+      supply_shock_setting: none
+      change_interval: 20
+      shock_mag: 0.03
+      cost_tradeoff: 0.01
+      stop_cts_changes_halfway: false
+      fix_sector_receiving_change: -1
+      init_tssi_melt: 1
+      output_equation: absolute
+      employment_guardrails: false
+      s_floor: 1e-05
+      mu_L: 0.5
+      eps_u: 1e-08
+      eps_m: 1e-08
+      T: 100
+      res: 3
   figure_4:
     name: Figure 4
     desc: basic-shock.png
@@ -81,7 +105,7 @@ presets:
     name: Figure 1
     desc: basic-dynamics
     params:
-      A: [[0.2, 0.0, 0.4], [0.2, 0.8, 0.0], [0.0, 0.1, 0.1]]
+      A: [[0.2, 0.2, 0.4], [0.2, 0.8, 0.0], [0.0, 0.1, 0.1]]
       l: [0.7, 0.6, 0.3]
       b_bar: [0.6, 0.0, 0.2]
       c_bar: [0.2, 0.0, 0.4]
@@ -122,10 +146,10 @@ presets:
       init_tssi_melt: 1.0
       output_equation: absolute
       employment_guardrails: false
-      s_floor: 1.0e-05
+      s_floor: 1e-05
       mu_L: 0.5
-      eps_u: 1.0e-08
-      eps_m: 1.0e-08
+      eps_u: 1e-08
+      eps_m: 1e-08
       T: 100
       res: 3
   figure_2a:
