--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,11 @@ h5py==3.15.1
 idna==3.11
 kiwisolver==1.4.9
 matplotlib==3.10.7
+Mesa==3.4.1
 mpmath==1.3.0
 numpy==2.3.4
 packaging==25.0
+pandas==2.3.3
 pillow==12.0.0
 pyparsing==3.2.5
 pyqt-tools==1.0.0
@@ -24,6 +26,7 @@ PyQt6-stubs==20250824
 PyQt6_sip==13.10.2
 python-dateutil==2.9.0.post0
 PythonQwt==0.15.0
+pytz==2025.2
 PyYAML==6.0.3
 QtPy==2.4.3
 requests==2.32.5
@@ -31,4 +34,6 @@ SciencePlots==2.1.1
 scipy==1.16.3
 six==1.17.0
 tomli==2.3.0
+tqdm==4.67.1
+tzdata==2025.3
 urllib3==2.5.0
